tests/sketchy_variants/sketchy_variants.exp
Error ------------------------------------------------------------------------------------------------------ test.js:5:5

Sketchy null check on boolean [1] which is potentially false. Perhaps you meant to check for null or undefined [2]?
[sketchy-null-bool]

   test.js:5:5
   5| if (x){}
          ^

References:
   test.js:2:8
   2| var x: bool|mixed|number|string = null
             ^^^^ [1]
   test.js:2:13
   2| var x: bool|mixed|number|string = null
                  ^^^^^ [2]


Error ------------------------------------------------------------------------------------------------------ test.js:5:5

Sketchy null check on mixed [1] which is potentially false. Perhaps you meant to check for null or undefined [1]?
[sketchy-null-mixed]

   test.js:5:5
   5| if (x){}
          ^

References:
   test.js:2:13
   2| var x: bool|mixed|number|string = null
                  ^^^^^ [1]


Error ------------------------------------------------------------------------------------------------------ test.js:5:5

Sketchy null check on number [1] which is potentially 0. Perhaps you meant to check for null or undefined [2]?
[sketchy-null-number]

   test.js:5:5
   5| if (x){}
          ^

References:
   test.js:2:19
   2| var x: bool|mixed|number|string = null
                        ^^^^^^ [1]
   test.js:2:13
   2| var x: bool|mixed|number|string = null
                  ^^^^^ [2]


Error ------------------------------------------------------------------------------------------------------ test.js:5:5

Sketchy null check on string [1] which is potentially an empty string. Perhaps you meant to check for null or
undefined [2]? [sketchy-null-string]

   test.js:5:5
   5| if (x){}
          ^

References:
   test.js:2:26
   2| var x: bool|mixed|number|string = null
                               ^^^^^^ [1]
   test.js:2:13
   2| var x: bool|mixed|number|string = null
                  ^^^^^ [2]


Error ------------------------------------------------------------------------------------------------------ test.js:9:5

Sketchy null check on mixed [1] which is potentially false. Perhaps you meant to check for null or undefined [1]?
[sketchy-null-mixed]

   test.js:9:5
   9| if (x){}
          ^

References:
   test.js:2:13
   2| var x: bool|mixed|number|string = null
                  ^^^^^ [1]


Error ------------------------------------------------------------------------------------------------------ test.js:9:5

Sketchy null check on number [1] which is potentially 0. Perhaps you meant to check for null or undefined [2]?
[sketchy-null-number]

   test.js:9:5
   9| if (x){}
          ^

References:
   test.js:2:19
   2| var x: bool|mixed|number|string = null
                        ^^^^^^ [1]
   test.js:2:13
   2| var x: bool|mixed|number|string = null
                  ^^^^^ [2]


Error ------------------------------------------------------------------------------------------------------ test.js:9:5

Sketchy null check on string [1] which is potentially an empty string. Perhaps you meant to check for null or
undefined [2]? [sketchy-null-string]

   test.js:9:5
   9| if (x){}
          ^

References:
   test.js:2:26
   2| var x: bool|mixed|number|string = null
                               ^^^^^^ [1]
   test.js:2:13
   2| var x: bool|mixed|number|string = null
                  ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:13:5

Sketchy null check on boolean [1] which is potentially false. Perhaps you meant to check for null or undefined [2]?
[sketchy-null-bool]

   test.js:13:5
   13| if (x){}
           ^

References:
   test.js:2:8
    2| var x: bool|mixed|number|string = null
              ^^^^ [1]
   test.js:2:13
    2| var x: bool|mixed|number|string = null
                   ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:13:5

Sketchy null check on number [1] which is potentially 0. Perhaps you meant to check for null or undefined [2]?
[sketchy-null-number]

   test.js:13:5
   13| if (x){}
           ^

References:
   test.js:2:19
    2| var x: bool|mixed|number|string = null
                         ^^^^^^ [1]
   test.js:2:13
    2| var x: bool|mixed|number|string = null
                   ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:13:5

Sketchy null check on string [1] which is potentially an empty string. Perhaps you meant to check for null or
undefined [2]? [sketchy-null-string]

   test.js:13:5
   13| if (x){}
           ^

References:
   test.js:2:26
    2| var x: bool|mixed|number|string = null
                                ^^^^^^ [1]
   test.js:2:13
    2| var x: bool|mixed|number|string = null
                   ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:17:5

Sketchy null check on boolean [1] which is potentially false. Perhaps you meant to check for null or undefined [2]?
[sketchy-null-bool]

   test.js:17:5
   17| if (x){}
           ^

References:
   test.js:2:8
    2| var x: bool|mixed|number|string = null
              ^^^^ [1]
   test.js:2:13
    2| var x: bool|mixed|number|string = null
                   ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:17:5

Sketchy null check on mixed [1] which is potentially false. Perhaps you meant to check for null or undefined [1]?
[sketchy-null-mixed]

   test.js:17:5
   17| if (x){}
           ^

References:
   test.js:2:13
    2| var x: bool|mixed|number|string = null
                   ^^^^^ [1]


Error ----------------------------------------------------------------------------------------------------- test.js:17:5

Sketchy null check on string [1] which is potentially an empty string. Perhaps you meant to check for null or
undefined [2]? [sketchy-null-string]

   test.js:17:5
   17| if (x){}
           ^

References:
   test.js:2:26
    2| var x: bool|mixed|number|string = null
                                ^^^^^^ [1]
   test.js:2:13
    2| var x: bool|mixed|number|string = null
                   ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:21:5

Sketchy null check on boolean [1] which is potentially false. Perhaps you meant to check for null or undefined [2]?
[sketchy-null-bool]

   test.js:21:5
   21| if (x){}
           ^

References:
   test.js:2:8
    2| var x: bool|mixed|number|string = null
              ^^^^ [1]
   test.js:2:13
    2| var x: bool|mixed|number|string = null
                   ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:21:5

Sketchy null check on mixed [1] which is potentially false. Perhaps you meant to check for null or undefined [1]?
[sketchy-null-mixed]

   test.js:21:5
   21| if (x){}
           ^

References:
   test.js:2:13
    2| var x: bool|mixed|number|string = null
                   ^^^^^ [1]


Error ----------------------------------------------------------------------------------------------------- test.js:21:5

Sketchy null check on number [1] which is potentially 0. Perhaps you meant to check for null or undefined [2]?
[sketchy-null-number]

   test.js:21:5
   21| if (x){}
           ^

References:
   test.js:2:19
    2| var x: bool|mixed|number|string = null
                         ^^^^^^ [1]
   test.js:2:13
    2| var x: bool|mixed|number|string = null
                   ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:27:5

Sketchy null check on boolean [1] which is potentially false. Perhaps you meant to check for null or undefined [2]?
[sketchy-null-bool]

   test.js:27:5
   27| if (x){}
           ^

References:
   test.js:2:8
    2| var x: bool|mixed|number|string = null
              ^^^^ [1]
   test.js:2:13
    2| var x: bool|mixed|number|string = null
                   ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:31:5

Sketchy null check on mixed [1] which is potentially false. Perhaps you meant to check for null or undefined [1]?
[sketchy-null-mixed]

   test.js:31:5
   31| if (x){}
           ^

References:
   test.js:2:13
    2| var x: bool|mixed|number|string = null
                   ^^^^^ [1]


Error ----------------------------------------------------------------------------------------------------- test.js:35:5

Sketchy null check on number [1] which is potentially 0. Perhaps you meant to check for null or undefined [2]?
[sketchy-null-number]

   test.js:35:5
   35| if (x){}
           ^

References:
   test.js:2:19
    2| var x: bool|mixed|number|string = null
                         ^^^^^^ [1]
   test.js:2:13
    2| var x: bool|mixed|number|string = null
                   ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:39:5

Sketchy null check on string [1] which is potentially an empty string. Perhaps you meant to check for null or
undefined [2]? [sketchy-null-string]

   test.js:39:5
   39| if (x){}
           ^

References:
   test.js:2:26
    2| var x: bool|mixed|number|string = null
                                ^^^^^^ [1]
   test.js:2:13
    2| var x: bool|mixed|number|string = null
                   ^^^^^ [2]



Found 20 errors
